kubectl/nginx-ingress-green-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: bluegreenapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green-app
                port:
                  number: 8081
